Running server-side-template-composition

--- a/server-side-template-composition/html/index.html
+++ b/server-side-template-composition/html/index.html
@@ -5,6 +5,17 @@
   </head>
   <body>
     <h1>🍽 Feed me</h1>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/order">Order</a>
+      </li>
+      <li>
+        <a href="/profile">Profile</a>
+      </li>
+    </ul>
     <!--# include file="$PAGE.html" -->
   </body>
 </html>
